# namecheap-sdk

./: .coverage  .env.example  .gitignore  README.md  makefile  pyproject.toml
app/: create.py  dependencies.py  get_info.py  list.py  parse_csr.py
src/app/: create.py  dependencies.py  get_info.py
src/namecheap_sdk/: __init__.py  cli.py  namecheap.py
src/namecheap_sdk/client/: client.py  contract.py
src/namecheap_sdk/schemas/: base.py  config.py
src/namecheap_sdk/schemas/request/: ssl.py
src/namecheap_sdk/schemas/response/ssl/: create.py  ssl_certificate.py
src/namecheap_sdk/services/: ssl.py
tests/: conftest.py
tests/unit/: test_namecheap.py
tests/unit/client/: test_client.py
tests/unit/schemas/: test_base.py  test_config.py
