[project]
name = "namecheap-sdk"
version = "0.1.0"
description = "Python SDK for Namecheap API"
authors = [
    {name = "Vimal Saini",email = "vimal.saini25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "xmltodict (>=1.0.4,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=namecheap_sdk --cov-report=term-missing"
